--- a/src/index.css
+++ b/src/index.css
@@ -110,4 +110,9 @@ code {
   border-color: black;
 }
 
-
+@media only screen and (max-width: 600px) {
+  body {
+    padding-left: 0%;
+    padding-right: 0%;
+  }
+}
