--- a/src/index.css
+++ b/src/index.css
@@ -110,6 +110,35 @@ code {
   border-color: black;
 }
 
+.bar{
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  min-height: 40px;
+  padding: 5px 20px;
+  background-color: #09090e;
+  border-radius: 10px;
+}
+
+
+
+.SoftwareBtn{
+  padding: 15px 32px;
+  background-color: #2b2b46;
+  color: white;
+  cursor:pointer;
+  border-radius: 10px;
+}
+
+.GameBtn{
+  padding: 15px 32px;
+  background-color: #09090e;
+  color: white;
+  cursor:pointer;
+  border-radius: 10px;
+}
+
 
 @media only screen and (min-width: 1024px) {
   body {
@@ -124,18 +153,6 @@ code {
   }
 }
 
-@media only screen and (max-width: 1024px) {
-  body {
-    padding-left: 0%;
-    padding-right: 0%;
-  }
-
-  .heading-text{
-    margin-top: 1%;
-    position: relative;
-    right: 15%;
-  }
-}
 
 @media only screen and (min-width: 1024px) {
   body {
