--- a/src/index.css
+++ b/src/index.css
@@ -140,7 +140,7 @@ code {
 }
 
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   body {
     padding-left: 0%;
     padding-right: 0%;
